service title spacing fix

--- a/public/assets/scss/components/home/home-services.scss
+++ b/public/assets/scss/components/home/home-services.scss
@@ -5,6 +5,7 @@
 .home-services {
     padding: 80px 0;
     &__subtitle {
+        padding-top: 23px;
         @extend %section-subtitle;
     }
     &__title {
