--- a/public/assets/scss/helpers/_extensions.scss
+++ b/public/assets/scss/helpers/_extensions.scss
@@ -3,14 +3,14 @@
     font-weight: $font_medium;
     line-height: 1;
     color: $primary-color;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
 }
 %section-title {
     font-size: size(32);
     font-weight: $font-semibold;
     color: $black;
     max-width: 500px;
-    margin-bottom: 15px;
+    margin-bottom: 12px;
 }
 %section-description {
     font-size: size(16);
